--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>12/2023: Our paper on sentence representation has been awarded the outstanding paper of EMNLP 2023.</li>
 						<li>10/2023: Five papers are accepted to EMNLP 2023. Topics including Open-world Information Extraction, Sentence Embedding for Information Retrieval, and story-level commonsense reasoning.</li>
 						<li>09/2023: Our paper "Thrust: Adaptively Propels Large Language Models with External Knowledge" has been accepted to Neurips 2023.</li>
 						<li>07/2023: Our paper "Video State-changing Object Segmentation" has been accepted to ICCV 2023.</li>
@@ -421,7 +422,7 @@ PIVOINE: Instruction Tuning for Open-world Information Extraction. Findings of E
 	</li>
 	<li>Jiayang Cheng, Lin Qiu, Tsz Ho CHAN, Tianqing Fang, Weiqi Wang, Chunkit Chan, Qipeng Guo, <b>Hongming Zhang</b>, Yangqiu Song, Yue Zhang, Zheng Zhang. STORYANALOGY: Deriving Story-level Analogies from Large Language Models to Unlock Analogical Understanding. EMNLP 2023.
 	</li>
-	<li>James Y. Huang, Wenlin Yao, Kaiqiang Song, <b>Hongming Zhang</b>, Muhao Chen, Dong Yu. Bridging Continuous and Discrete Spaces: Interpretable Sentence Representation Learning via Compositional Operations. EMNLP 2023.
+	<li>James Y. Huang, Wenlin Yao, Kaiqiang Song, <b>Hongming Zhang</b>, Muhao Chen, Dong Yu. Bridging Continuous and Discrete Spaces: Interpretable Sentence Representation Learning via Compositional Operations. EMNLP 2023. (<font color="red">Outstanding Paper</font>)
 
 	</li>
 	<li>Xinran Zhao, <b>Hongming Zhang</b>, Xiaoman Pan, Wenlin Yao, Dong Yu, and Jianshu Chen. Thrust: Adaptively Propels Large Language Models with External Knowledge. Neurips 2023.
@@ -755,6 +756,7 @@ PIVOINE: Instruction Tuning for Open-world Information Extraction. Findings of E
                     Awards</b></p>
                 <span>
 							<ul>
+								<li>EMNLP 2023 Outstanding Paper (Dec 2023)</li>
 								<li>HKUST Engineering PhD Research Excellence Finalist Award. HKUST (Feb 2022)</li>
 								<li>SENG Academic Award for Continuing PhD students, HKUST (Sep 2020)</li>
 								<li>Microsoft Research Asia Fellowship, Microsoft (Nov 2019)</li>
