--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>01/2024: Three papers are accepted to EACL 2024 findings.</li>
 						<li>12/2023: Our paper on sentence representation has been awarded the outstanding paper of EMNLP 2023.</li>
 						<li>10/2023: Five papers are accepted to EMNLP 2023. Topics including Open-world Information Extraction, Sentence Embedding for Information Retrieval, and story-level commonsense reasoning.</li>
 						<li>09/2023: Our paper "Thrust: Adaptively Propels Large Language Models with External Knowledge" has been accepted to Neurips 2023.</li>
@@ -410,6 +411,16 @@
 
 
 							<h2>Conference Publications</h2>
+					<p style="font-size:18px">2024</p>
+					<ul>
+						<li>Nan Xu, <b>Hongming Zhang</b>, and Jianshu Chen. CEO: Corpus-based Open-Domain Event Ontology Induction. Findings of EACL 2024.
+	</li>
+						<li>Tianqing Fang, Wenxuan Zhou, Fangyu Liu, <b>Hongming Zhang</b>, Yangqiu Song, Muhao Chen.
+On-the-fly Denoising for Data Augmentation in Natural Language Understanding. Findings of EACL 2024.
+	</li>
+						<li>Haoyu Wang, <b>Hongming Zhang</b>, Kaiqiang Song, Dong Yu, Dan Roth. Event Semantic Classification in Context. Findings of EACL 2024.
+	</li>
+					</ul>
 												<p style="font-size:18px">2023</p>
 
 <ul>
