--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>03/2024: Five papers are accepted to NAACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and fine-grained information retrieval. </li>
 						<li>01/2024: Three papers are accepted to EACL 2024 findings.</li>
 						<li>12/2023: Our paper on sentence representation has been awarded the outstanding paper of EMNLP 2023.</li>
 						<li>10/2023: Five papers are accepted to EMNLP 2023. Topics including Open-world Information Extraction, Sentence Embedding for Information Retrieval, and story-level commonsense reasoning.</li>
@@ -413,6 +414,17 @@
 							<h2>Conference Publications</h2>
 					<p style="font-size:18px">2024</p>
 					<ul>
+						<li>Ruixin Hong, <b>Hongming Zhang</b>, Xinyu Pang, Dong Yu, Changshui Zhang. A Closer Look at the Self-Verification Abilities of Large Language Models in Logical Reasoning. NAACL 2024.
+	</li>
+						<li>Sihao Chen, <b>Hongming Zhang</b>, Tong Chen, Ben Zhou, Wenhao Yu, Dian Yu, Baolin Peng, Hongwei Wang, Dan Roth, Dong Yu. Sub-Sentence Encoder: Contrastive Learning of Propositional Semantic Representations. NAACL 2024.
+	</li>
+						<li>Hangfeng He, <b>Hongming Zhang</b>, Dan Roth. SocREval: Large Language Models with the Socratic Method for Reference-free Reasoning Evaluation. Findings of NAACL 2024.
+	</li>
+						<li>Tianqing Fang, Zhaowei Wang, Wenxuan Zhou, <b>Hongming Zhang</b>, Yangqiu Song, Muhao Chen. Getting Sick After Seeing a Doctor? Diagnosing and Mitigating Knowledge Conflicts in Event Temporal Reasoning. Findings of NAACL 2024.
+	</li>
+						<li>Zhaowei Wang, Haochen Shi, Weiqi Wang, Tianqing Fang, <b>Hongming Zhang</b>, Sehyun Choi, Xin Liu, Yangqiu Song.
+ AbsPyramid: Benchmarking the Abstraction Ability of Language Models with a Unified Entailment Graph. Findings of NAACL 2024.
+	</li>
 						<li>Nan Xu, <b>Hongming Zhang</b>, and Jianshu Chen. CEO: Corpus-based Open-Domain Event Ontology Induction. Findings of EACL 2024.
 	</li>
 						<li>Tianqing Fang, Wenxuan Zhou, Fangyu Liu, <b>Hongming Zhang</b>, Yangqiu Song, Muhao Chen.
