--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>05/2024: Five papers are accepted to ACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and agents. </li>
 						<li>03/2024: Five papers are accepted to NAACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and fine-grained information retrieval. </li>
 						<li>01/2024: Three papers are accepted to EACL 2024 findings.</li>
 						<li>12/2023: Our paper on sentence representation has been awarded the outstanding paper of EMNLP 2023.</li>
@@ -414,6 +415,17 @@
 							<h2>Conference Publications</h2>
 					<p style="font-size:18px">2024</p>
 					<ul>
+						<li>Zhaowei Wang, Wei Fan, Qing Zong, <b>Hongming Zhang</b>, Sehyun Choi, Tianqing Fang, Xin Liu, Yangqiu Song, Ginny Wong, Simon See. AbsInstruct: Eliciting Abstraction Ability from LLMs through Explanation Tuning with Plausibility Estimation. ACL 2024.
+	</li>
+						<li>Yinya Huang, Ruixin Hong, <b>Hongming Zhang</b>, Wei Shao, Zhicheng YANG, Dong Yu, Changshui Zhang, Xiaodan Liang, Linqi Song.
+ CLOMO: Counterfactual Logical Modification with Large Language Models. ACL 2024.
+	</li>
+						<li>Hongliang He, Wenlin Yao, Kaixin Ma, Wenhao Yu, Yong Dai, <b>Hongming Zhang</b>, Zhenzhong Lan, Dong Yu. WebVoyager: Building an End-to-End Web Agent with Large Multimodal Models. ACL 2024.
+	</li>
+						<li>Xinran Zhao, <b>Hongming Zhang</b>, Xiaoman Pan, Wenlin Yao, Dong Yu, Tongshuang Wu, Jianshu Chen. Fact-and-Reflection (FaR) Improves Confidence Calibration of Large Language Models. Findings of ACL 2024.
+	</li>
+						<li>Fengyu Cai, Xinran Zhao, <b>Hongming Zhang</b>, Iryna Gurevych, Heinz Koeppl. GEOHard: Towards Measuring Class-wise Hardness through Modelling Class Semantics. Findings of ACL 2024.
+	</li>
 						<li>Ruixin Hong, <b>Hongming Zhang</b>, Xinyu Pang, Dong Yu, Changshui Zhang. A Closer Look at the Self-Verification Abilities of Large Language Models in Logical Reasoning. NAACL 2024.
 	</li>
 						<li>Sihao Chen, <b>Hongming Zhang</b>, Tong Chen, Ben Zhou, Wenhao Yu, Dian Yu, Baolin Peng, Hongwei Wang, Dan Roth, Dong Yu. Sub-Sentence Encoder: Contrastive Learning of Propositional Semantic Representations. NAACL 2024.
