--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>09/2024: Five papers are accepted to EMNLP 2024 (and findings). Topics cover theory-of-mind, RAG, and complex reasoning capabilities of LLMs</li>
 						<li>05/2024: Five papers are accepted to ACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and agents. </li>
 						<li>03/2024: Five papers are accepted to NAACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and fine-grained information retrieval. </li>
 						<li>01/2024: Three papers are accepted to EACL 2024 findings.</li>
@@ -302,9 +303,14 @@
             <div class="tab-content">
                 <div class="show"><span style="">
 
-							<p style="font-size:18px"> Commonsense Reasoning </p>
+							<p style="font-size:18px"> Highlighted Papers </p>
 
 							<ul>
+								<li><b>Hongming Zhang</b>, Xiaoman Pan*, Hongwei Wang, Kaixin Ma, Wenhao Yu, and Dong Yu.
+									Cognitive Kernel: An Open-source Agent System towards Generalist Autopilots. Technical Report. 2024.
+									<a href="https://arxiv.org/abs/2409.10277">[PAPER]</a>
+									<a href="https://github.com/tencent-ailab/CogKernel">[CODE & DATA]</a>
+								</li>
 								<li><b>Hongming Zhang</b>*, Xin Liu*, Haojie Pan*, Yangqiu Song, and Cane Wing-Ki Leung.
 									ASER: A Large-scale Eventuality Knowledge Graph. The Web Conference (WWW). 2020.
 									<a href="https://arxiv.org/abs/1905.00270">[PAPER]</a>
@@ -323,71 +329,9 @@
 									<a href="https://github.com/HKUST-KnowComp/WinoWhy">[CODE & DATA]</a>
 									<a href="https://hkustconnect-my.sharepoint.com/:b:/g/personal/hzhangal_connect_ust_hk/EVa4qc-LCThJrAeuk9lu-vIB_sabaGBGjSavYcMz9xAn5g?e=klEQh3">[PPT]</a>
 								</li>
-								<li>Tianqing Fang, <b>Hongming Zhang</b>, Weiqi Wang, Yangqiu Song, and Bin He.
-									DISCOS: Bridging the Gap between Discourse Knowledge and Commonsense Knowledge. The Web Conference (WWW). 2021.
-									<a href="https://arxiv.org/abs/2101.00154">[PAPER]</a>
-									<a href="https://github.com/HKUST-KnowComp/DISCOS-commonsense">[CODE & DATA]</a>
-								</li>
 
-								<li>Changlong Yu*, <b>Hongming Zhang*</b>, Yangqiu Song, and Wilfred Ng.
-									CoCoLM: COmplex COmmonsense Enhanced Language Model. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2022.
-									<a href="https://arxiv.org/abs/2012.15643">[PAPER]</a>
-									<a href="https://github.com/HKUST-KnowComp/CoCoLM">[CODE & DATA]</a>
-								</li>
 							</ul>
 
-							<p style="font-size:18px">Event Understanding</p>
-							<ul>
-								<li><b>Hongming Zhang</b>, Muhao Chen, Haoyu Wang, Yangqiu Song, and Dan Roth.
-									Analogous Process Structure Induction for Sub-event Sequence Prediction.
-									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2020.
-									<a href="https://cogcomp.seas.upenn.edu/papers/ZCWSR20.pdf">[PAPER]</a>
-									<a href="https://github.com/CogComp/APSI">[CODE & DATA]</a>
-									<a href="https://hkustconnect-my.sharepoint.com/:b:/g/personal/hzhangal_connect_ust_hk/EVYDMN4W7odIhXrgh7OVaVkByGzsxPmkfI5_T_mP5InktA?e=m4rbGk">[PPT]</a>
-								</li>
-								<li>Muhao Chen, <b>Hongming Zhang</b>, Haoyu Wang, and Dan Roth.
-									What Are You Trying to Do? Semantic Typing of Event Processes. The SIGNLL Conference on Computational Natural Language Learning (CoNLL). 2020.
-									<a href="https://arxiv.org/abs/2010.06724">[PAPER]</a>
-									<a href="https://github.com/CogComp/Event_Process_Typing">[CODE & DATA]</a>
-									(<font color="red">Best Paper Nomination</font>)
-								</li>
-								<li><b>Hongming Zhang</b>, Yintong Huo, Xinran Zhao, Yangqiu Song, and Dan Roth.
-									Learning Contextual Causality from Time-consecutive Images. Causality in Vision workshop at CVPR 2021.
-									<a href="https://arxiv.org/abs/2012.07138">[PAPER]</a>
-									<a href="https://github.com/HKUST-KnowComp/Vis_Causal">[CODE & DATA]</a>
-							</ul>
-
-							<p style="font-size:18px"> Information Extraction </p>
-							<ul>
-							<li><b>Hongming Zhang</b>, Haoyu Wang, and Dan Roth.
-									Zero-shot Label-Aware Event Trigger and Argument Classification. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2021.
-								</li>
-																<li>Qing Lyu, <b>Hongming Zhang</b>, Elior Sulem, and Dan Roth.
-									Zero-shot Event Extraction via Transfer Learning: Challenges and Insights. Annual Meeting of the Association for Computational Linguistics (ACL). 2021. (Short Paper)
-								</li>
-							<li>Haoyu Wang, Muhao Chen, <b>Hongming Zhang</b>, and Dan Roth.
-									Joint Constrained Learning for Event-Event Relation Extraction.
-									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2020.
-									<a href="https://arxiv.org/abs/2010.06727">[PAPER]</a>
-									<a href="https://github.com/why2011btv/JointConstrainedLearning">[CODE]</a>
-								</li>
-							</ul>
-
-							<p style="font-size:18px"> KG for NLP </p>
-							<ul>
-								<li><b>Hongming Zhang</b>, Yan Song, Yangqiu Song, and Dong Yu.
-									Knowledge-aware Pronoun Coreference Resolution. Annual Meeting of the Association for Computational Linguistics (ACL). 2019.
-									<a href="https://arxiv.org/abs/1907.03663">[PAPER]</a>
-									<a href="https://github.com/HKUST-KnowComp/Pronoun-Coref-KG">[CODE]</a>
-									<a href="https://hkustconnect-my.sharepoint.com/:p:/g/personal/hzhangal_connect_ust_hk/ETZNkiLkgfBPk80uHu33aVcB1xHaSu4bDfC6zmor0cpDIA?e=No5aBq">[PPT]</a>
-								</li>
-								<li><b>Hongming Zhang</b>, Yan Song, and Yangqiu Song.
-									Incorporating Context and External Knowledge for Pronoun Coreference Resolution. North American Chapter of the Association for Computational Linguistics (NAACL-HLT). 2019.
-									<a href="https://arxiv.org/abs/1905.10238">[PAPER]</a>
-									<a href="https://github.com/HKUST-KnowComp/Pronoun-Coref">[CODE]</a>
-									<a href="https://hkustconnect-my.sharepoint.com/:b:/g/personal/hzhangal_connect_ust_hk/Ecc65GTeSwhNilzPBIrGRZEBsMx7pIiPC87es23zdkjJag?e=XyYBU8">[PPT]</a>
-								</li>
-							</ul>
 						</span></div>
                 <div><span style="">
 							<h2>Journal Publications</h2>
@@ -415,6 +359,16 @@
 							<h2>Conference Publications</h2>
 					<p style="font-size:18px">2024</p>
 					<ul>
+						<li>Wenhao Yu, <b>Hongming Zhang</b>, Xiaoman Pan, peixin cao, Kaixin Ma, Jian Li, Hongwei Wang, Dong Yu. Chain-of-Note: Enhancing Robustness in Retrieval-Augmented Language Models. EMNLP 2024.
+	</li>
+						<li>Fengyu Cai, Xinran Zhao, Tong Chen, Sihao Chen, <b>Hongming Zhang</b>, Iryna Gurevych, Heinz Koeppl. MixGR: Enhancing Retriever Generalization for Scientific Domain through Complementary Granularity. EMNLP 2024.
+	</li>
+						<li>Tong Chen, Hongwei Wang, Sihao Chen, Wenhao Yu, Kaixin Ma, Xinran Zhao, <b>Hongming Zhang</b>, Dong Yu. Dense X Retrieval: What Retrieval Granularity Should We Use? EMNLP 2024.
+	</li>
+						<li>Ruixin Hong, <b>Hongming Zhang</b>, Xiaoman Pan, Dong Yu, Changshui Zhang. Abstraction-of-Thought Makes Language Models Better Reasoners. EMNLP 2024 Findings.
+	</li>
+						<li>Chunkit Chan, Cheng Jiayang, Yauwai Yim, Zheye Deng, Wei Fan, Haoran Li, Xin Liu, <b>Hongming Zhang</b>, Weiqi Wang, Yangqiu Song. NegotiationToM: A Benchmark for Stress-testing Machine Theory of Mind on Negotiation Surrounding. EMNLP 2024 Findings.
+	</li>
 						<li>Zhaowei Wang, Wei Fan, Qing Zong, <b>Hongming Zhang</b>, Sehyun Choi, Tianqing Fang, Xin Liu, Yangqiu Song, Ginny Wong, Simon See. AbsInstruct: Eliciting Abstraction Ability from LLMs through Explanation Tuning with Plausibility Estimation. ACL 2024.
 	</li>
 						<li>Yinya Huang, Ruixin Hong, <b>Hongming Zhang</b>, Wei Shao, Zhicheng YANG, Dong Yu, Changshui Zhang, Xiaodan Liang, Linqi Song.
