--- a/index.html
+++ b/index.html
@@ -117,17 +117,16 @@
                             </p>
 
                             <p>
-                                I am currently a senior research scientist at Tencent AI Lab, Seattle. Before that, I
+                                Hongming Zhang is currently a senior researcher at Tencent AI Lab, Seattle. He leads the research
+								on <b>Self-Evolving LLM Agents</b> at Tencent AI Lab. Before that, He
                                 was a research scholar at University of Pennsylvania, working with Prof. <a
-                                    href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, I got my
+                                    href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, He got my
                                 Ph.D. degree from HKUST, supervised by <a href="https://www.cse.ust.hk/~yqsong/">Prof.
-                                Yangqiu Song</a>. Before that, I received my MPhil. degree from the TLE program, HKUST
+                                Yangqiu Song</a>. Before that, He received my MPhil. degree from the TLE program, HKUST
                                 in 2018 and B.E.degree from the ECE department, HKUST in 2016.
 
-                                My research interest is primarily on commonsense reasoning and multi-modal event
-                                understanding. Specifically, I aim at building a large-scale eventuality-centric
-                                knowledge graph to connect different modalities and help machines understand the
-                                event-centric commonsense.
+                                Hongming's research interest is primarily on LLM Agents and Self-evolving LLMs.
+								Specifically, Hongming aims at building a general purpose LLM agent system that could finish autopilot tasks and learn during deployment.
 
                                 You can find me at hzhangal [AT] cse.ust.hk or learn more about me with my <a
                                     href="https://scholar.google.com/citations?user=i5ETuuQAAAAJ&hl=en">Google
@@ -152,10 +151,11 @@
                     Research Focus</b></p>
                 <div class="two-col-container">
                     <ul>
-                        <li>Commonsense Reasoning</li>
-                        <li>Open-domain Event Understanding</li>
-                        <li>Selectional Preference</li>
-                        <li>Coreference Resolution</li>
+                        <li>LLM Agents</li>
+                        <li>Self-evolving LLM Systems</li>
+						<li>Advanced RAG Systems</li>
+						<li>Information Retrieval</li>
+						<li>Information Extraction</li>
                     </ul>
                 </div>
             </div>
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>01/2025: Two papers are accepted to ICLR 2024. Topics cover MLE agents and code agents.</li>
 						<li>09/2024: Five papers are accepted to EMNLP 2024 (and findings). Topics cover theory-of-mind, RAG, and complex reasoning capabilities of LLMs</li>
 						<li>05/2024: Five papers are accepted to ACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and agents. </li>
 						<li>03/2024: Five papers are accepted to NAACL 2024 (and findings). Topics cover complex reasoning capability of LLMs and fine-grained information retrieval. </li>
