--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 Hongming's research interest is primarily on LLM Agents and Self-evolving LLMs.
 								Specifically, Hongming aims at building a general purpose LLM agent system that could finish autopilot tasks and learn during deployment.
 
-                                You can find me at hzhangal [AT] cse.ust.hk or learn more about me with my <a
+                                You can find Hongming at hzhangal [AT] cse.ust.hk or learn more about Hongming with <a
                                     href="https://scholar.google.com/citations?user=i5ETuuQAAAAJ&hl=en">Google
                                 Scholar</a>, <a href="https://github.com/panda0881">Github</a>, and <a
                                     href="sources/CV.pdf">CV</a> (Dec, 2022).
