--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                                 Hongming Zhang is currently a senior researcher at Tencent AI Lab, Seattle. He leads the research
 								on <b>Self-Evolving LLM Agents</b> at Tencent AI Lab. Before that, He
                                 was a research scholar at University of Pennsylvania, working with <a
-                                    href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, He got my
+                                    href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, He got his
                                 Ph.D. degree from HKUST, supervised by <a href="https://www.cse.ust.hk/~yqsong/">Prof.
-                                Yangqiu Song</a>. Before that, He received my MPhil. degree from the TLE program, HKUST
+                                Yangqiu Song</a>. Before that, He received his MPhil. degree from the TLE program, HKUST
                                 in 2018 and B.E.degree from the ECE department, HKUST in 2016.
 
                                 Hongming's research interest is primarily on LLM Agents and Self-evolving LLMs.
