--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
             <div style="margin-right: 40px; text-align: justify;" class="tab-head">
                 <b style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif" class="selected">[Selected
-                    Publications by Topics]</b>
+                    Publications]</b>
                 <b style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif">[Full
                     Publications by Year]</b>
                 <!-- 						<p><span style="font-size:18px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b class="selected">[Selected Publications by Topics]</b> <b>[Full Publications]</b></span>&nbsp;&nbsp;<span></span></p> -->
@@ -304,7 +304,7 @@
             <div class="tab-content">
                 <div class="show"><span style="">
 
-							<p style="font-size:18px"> Highlighted Papers </p>
+<!--							<p style="font-size:18px"> Highlighted Papers </p>-->
 
 							<ul>
 								<li><b>Hongming Zhang</b>, Xiaoman Pan*, Hongwei Wang, Kaixin Ma, Wenhao Yu, and Dong Yu.
